groupby taxon api

--- a/read_clean_data.ipynb
+++ b/read_clean_data.ipynb
@@ -762,6 +762,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# phyto_groupby_taxon\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>taxon_per_m3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>taxon_group</th>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Centric diatom</th>\n",
+       "      <th>2007</th>\n",
+       "      <td>7551.534278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2008</th>\n",
+       "      <td>6175.653846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009</th>\n",
+       "      <td>8697.562267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>11326.249533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>6213.341902</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     taxon_per_m3\n",
+       "taxon_group    Year              \n",
+       "Centric diatom 2007   7551.534278\n",
+       "               2008   6175.653846\n",
+       "               2009   8697.562267\n",
+       "               2010  11326.249533\n",
+       "               2011   6213.341902"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phyto_groupby_taxon = pd.DataFrame(phyto_taxon_group.groupby(by=[\"taxon_group\",\"Year\"])[\"taxon_per_m3\"].mean())\n",
+    "\n",
+    "phyto_groupby_taxon.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# phyto_routes API"
    ]
   },
@@ -2002,6 +2091,94 @@
    "source": [
     "zoo_taxon_group = zoo.drop([\"Latitude\", \"Longitude\"], axis=1)\n",
     "zoo_taxon_group.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# zoo_groupby_taxon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>taxon_per_m3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>taxon_group</th>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">COPEPOD</th>\n",
+       "      <th>2007</th>\n",
+       "      <td>21.701183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2008</th>\n",
+       "      <td>12.533900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009</th>\n",
+       "      <td>6.800351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>5.326888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>4.545881</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  taxon_per_m3\n",
+       "taxon_group Year              \n",
+       "COPEPOD     2007     21.701183\n",
+       "            2008     12.533900\n",
+       "            2009      6.800351\n",
+       "            2010      5.326888\n",
+       "            2011      4.545881"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zoo_groupby_taxon = pd.DataFrame(zoo_taxon_group.groupby(by=[\"taxon_group\",\"Year\"])[\"taxon_per_m3\"].mean())\n",
+    "zoo_groupby_taxon.head()"
    ]
   },
   {
@@ -3315,6 +3492,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zoo_groupby_taxon.to_sql(\"zooplankton_groupby_taxon\", conn,)\n",
+    "phyto_groupby_taxon.to_sql(\"phytoplankton_groupby_taxon\", conn,)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [
@@ -3398,13 +3585,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Query phytoplankton Records in the the Database\n",
     "data = pd.read_sql(\"SELECT * FROM phytoplankton\", conn)\n",
-    "dataZ = pd.read_sql(\"SELECT * FROM zooplankton\", conn)"
+    "dataZ = pd.read_sql(\"SELECT * FROM phytoplankton_groupby_taxon\", conn)"
    ]
   },
   {
@@ -3519,7 +3706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -3543,80 +3730,56 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Route</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
+       "      <th>taxon_group</th>\n",
        "      <th>Year</th>\n",
        "      <th>taxon_per_m3</th>\n",
-       "      <th>log2_m3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>ABAB</td>\n",
-       "      <td>-37.91</td>\n",
-       "      <td>135.33</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>Centric diatom</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>7551.534278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>ABAB</td>\n",
-       "      <td>-37.91</td>\n",
-       "      <td>135.33</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>-0.6</td>\n",
+       "      <td>Centric diatom</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>6175.653846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>ABAB</td>\n",
-       "      <td>-37.91</td>\n",
-       "      <td>135.33</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>1.33</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>Centric diatom</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>8697.562267</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>ABAB</td>\n",
-       "      <td>-37.91</td>\n",
-       "      <td>135.33</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>Centric diatom</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>11326.249533</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>ABAB</td>\n",
-       "      <td>-37.88</td>\n",
-       "      <td>134.91</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>-0.6</td>\n",
+       "      <td>Centric diatom</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>6213.341902</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index Route  Latitude  Longitude  Year  taxon_per_m3  log2_m3\n",
-       "0      0  ABAB    -37.91     135.33  2020          2.00      1.0\n",
-       "1      1  ABAB    -37.91     135.33  2020          0.67     -0.6\n",
-       "2      2  ABAB    -37.91     135.33  2020          1.33      0.4\n",
-       "3      3  ABAB    -37.91     135.33  2020          4.00      2.0\n",
-       "4      4  ABAB    -37.88     134.91  2020          0.67     -0.6"
+       "      taxon_group  Year  taxon_per_m3\n",
+       "0  Centric diatom  2007   7551.534278\n",
+       "1  Centric diatom  2008   6175.653846\n",
+       "2  Centric diatom  2009   8697.562267\n",
+       "3  Centric diatom  2010  11326.249533\n",
+       "4  Centric diatom  2011   6213.341902"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
